LOC-582 Added collapse directive to research-collections, fixxed mobile width for sub-children containers

--- a/public/css/partials/_collections.scss
+++ b/public/css/partials/_collections.scss
@@ -67,7 +67,7 @@
 		}
 
 		.filters-wrapper {
-			display: block;
+			//display: block;
 			@include breakpoint($min, $post-palm) {
 				display: inline !important;
 			}
