--- a/public/css/partials/_global.scss
+++ b/public/css/partials/_global.scss
@@ -533,7 +533,7 @@ time {
 	color: black;
 	background-color: white;
 	margin-top: 2px;
-	width: 88%;
+	width: 80%;
 	box-shadow: 2px 2px 6px #C5C2BB;
 	display: none;
 	// Toggled within the directive
